--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
 	},
 	"homepage": "https://github.com/restspace/svelte-schema-form#readme",
 	"exports": {
-        ".": {
-            "types": "./dist/index.d.ts",
-            "svelte": "./dist/index.js"
-        },
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		},
 		"./*": "./dist/*"
-    },
-	"files": ["dist"],
+	},
+	"files": [
+		"dist"
+	],
 	"main": "dist/index.js",
 	"scripts": {
 		"dev": "vite dev",
@@ -37,23 +39,26 @@
 		"copyout": "xcopy /s /y src\\lib ..\\svelte-schema-form-script\\svelte-schema-form\\src\\lib"
 	},
 	"devDependencies": {
-    	"@sveltejs/adapter-auto": "^2.0.1",
-		"@sveltejs/kit": "^1.16.3",
-		"@sveltejs/package": "^2.0.2",
-		"@types/lodash-es": "^4.17.6",
-		"sass": "^1.57.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/kit": "^2.5.20",
+		"@sveltejs/package": "^2.3.2",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^22.1.0",
+		"sass": "^1.77.8",
+		"svelte": "^5.0.0-next.210",
+		"svelte-check": "^3.8.5",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.4",
+		"vite": "^5.3.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@exodus/schemasafe": "^1.0.0-rc.9",
+		"@exodus/schemasafe": "^1.3.0",
 		"lodash-es": "^4.17.21"
 	},
 	"peerDependencies": {
-		"svelte": "^3.0.0"
-	}
+		"svelte": "^3.0.0 || ^4.0.0 || ^5.0.0"
+	},
+	"packageManager": "yarn@4.5.0"
 }
